# auburn

./: Cargo.toml  build.py
aubc/: Cargo.toml
aubc/src/: core.rs  main.rs
auburn/: Cargo.toml
auburn/src/: error.rs  lib.rs
auburn/src/analysis/: analysis.rs  entity.rs  mod.rs  scope.rs
auburn/src/analysis/typer/: expressions.rs  items.rs  mod.rs  statements.rs  type_specs.rs
auburn/src/code_gen/: file_context.rs  mod.rs  type_helpers.rs
auburn/src/generator/: lir_builder.rs  mod.rs
auburn/src/ir/: ast.rs  hir.rs  lir.rs  mod.rs
auburn/src/mir/: mod.rs
auburn/src/syntax/: ast.rs  mod.rs  token.rs
auburn/src/syntax/parse/: mod.rs  parser.rs
auburn/src/syntax/tokenizer/: mod.rs
auburn/src/system/: file.rs  file_map.rs  mod.rs
auburn/src/types/: mod.rs  ty.rs  type_map.rs
auburn/src/utils/: entity_printer.rs  mir_printer.rs  mod.rs
docs/: spec.md
examples/: test  test.au
examples/analysis/: arrays  arrays.au  (+11 more)
language/: Cargo.toml
language/src/: error.rs  lib.rs
language/src/analysis/: analysis.rs  entity.rs  mod.rs  scope.rs  typer.rs
language/src/analysis/typer/: expressions.rs  items.rs  mod.rs  type_specs.rs
language/src/mir/: mod.rs
language/src/syntax/: ast.rs  mod.rs  token.rs
language/src/syntax/parse/: mod.rs  parser.rs
language/src/syntax/tokenizer/: mod.rs
language/src/system/: file.rs  file_map.rs
language/src/types/: mod.rs  ty.rs  type_map.rs
language/src/utils/: entity_printer.rs  mir_printer.rs  mod.rs
oxide/: Cargo.toml
src/: core.rs  error.rs  file.rs  lib.rs  main.rs
test/: output.rrn  test.py
(+95 files in other folders)
