[package]
name = "language"
version = "0.1.0"
authors = ["Andrew Bregger <adb3649@tamu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.20"
ordered-float = "2.0.0"

[[bin]]
name = "compiler"
path = "bin/main.rs"
